Change background color

--- a/app/components/primer/beta/flash.pcss
+++ b/app/components/primer/beta/flash.pcss
@@ -10,7 +10,7 @@
 
   /* Default color */
   color: var(--fgColor-default);
-  background-image: linear-gradient(var(--bgColor-accent-muted), var(--bgColor-accent-muted));
+  background: darkred;
   border-color: var(--borderColor-accent-muted);
 
   & .octicon {
