feat[#50499]: Add back button and breadcrumbs to page header

--- a/app/components/primer/open_project/page_header.html.erb
+++ b/app/components/primer/open_project/page_header.html.erb
@@ -1,4 +1,6 @@
 <%= render Primer::BaseComponent.new(**@system_arguments) do %>
+  <%= breadcrumbs %>
+  <%= back_button %>
   <%= title %>
   <%= description %>
   <%= actions %>
