fix[#50499]: Rename CSS class PageHeader-back_button to PageHeader-backButton

--- a/app/components/primer/open_project/page_header.pcss
+++ b/app/components/primer/open_project/page_header.pcss
@@ -50,6 +50,6 @@
   margin-bottom: var(--base-size-8);
 }
 
-.PageHeader-back_button {
+.PageHeader-backButton {
   margin-right: var(--base-size-4);
 }
