--- a/app/components/primer/open_project/page_header.html.erb
+++ b/app/components/primer/open_project/page_header.html.erb
@@ -1,7 +1,9 @@
 <%= render Primer::BaseComponent.new(**@system_arguments) do %>
   <%= breadcrumbs %>
-  <%= back_button %>
-  <%= title %>
+  <div class="PageHeader-titleBar">
+    <%= back_button %>
+    <%= title %>
+    <%= actions %>
+  </div>
   <%= description %>
-  <%= actions %>
 <% end %>
