Center back button in any cases. Unfortunately, there is a two pixel misalignment which we have to cancel out. This is most likely coming from the arrow being thinner than the font

--- a/app/components/primer/open_project/page_header.pcss
+++ b/app/components/primer/open_project/page_header.pcss
@@ -16,7 +16,7 @@
   display: flex;
   flex-flow: row;
   justify-content: flex-end;
-  align-items: baseline; /* Keep back button vertically aligned. */
+  align-items: center; /* Keep back button vertically aligned. */
 }
 
 .PageHeader-title {
@@ -53,5 +53,6 @@
 }
 
 .PageHeader-backButton {
+  margin-top: 2px; /* to center align with label */
   margin-right: var(--base-size-4);
 }
